src/z80asm/z80asm2/t/20-preproc/expected/cu_move_01.txt
% z88dk-z80asm -v -dump-after-directives t/20-preproc//input/cu_move_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Assembling t/20-preproc/input/cu_move_01.asm...
t/20-preproc/input/cu_move_01.asm:1:8: error: Expected a value, got "\n"
    cu.move 
           ^
t/20-preproc/input/cu_move_01.asm:2:10: error: Expected comma between expressions in CU_MOVE
    cu.move 0
             ^
t/20-preproc/input/cu_move_01.asm:3:10: error: Unterminated expression after ","
    cu.move 0,
             ^
t/20-preproc/input/cu_move_01.asm:4:12: error: Unexpected token: ","
    cu.move 0,0,
               ^
# file: t/20-preproc/input/cu_move_01.asm
Identifier	"CU_MOVE"	5:1	keyword=CU_MOVE 
Integer	"0"	5:9	int_value=0 
Comma	","	5:10	
Integer	"0"	5:11	int_value=0 
EndOfLine	"\n"	5:1	
Identifier	"CU_MOVE"	6:1	keyword=CU_MOVE 
Integer	"127"	6:9	int_value=127 
Comma	","	6:12	
Integer	"255"	6:13	int_value=255 
EndOfLine	"\n"	6:1	
